# MASS-Easy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Legacy.props  MASS.slnx  README-Windows.md  README.md
Arena/: Arena.vcxproj  CMakeLists.txt
Arena/src/: App.cpp  App.h  Bootstrap.cpp  Dialog.h  MassModel.h  Math.h  Panels.cpp  Renderer.cpp  Renderer.h  SimBridge.cpp  SimBridge.h  SkinGen.cpp  SkinGen.h  TrainBridge.cpp  TrainBridge.h  main.cpp
Docs/: 01-Requisitos-e-Setup.md  02-Build.md  03-Executar-Viewer.md  04-Treinar.md  05-Troubleshooting.md  06-Editor.md  MCP-Study.md  README.md
core/: CMakeLists.txt  DARTHelper.cpp  Mss.vcxproj  Muscle.cpp
data/: human.mass
editor/: CMakeLists.txt
editor/src/: App.cpp  App.h  Bootstrap.h  Camera.h  Dialog.h  MassModel.cpp  Math.h  Panels.cpp  Renderer.cpp  Renderer.h  SimBridge.cpp  SimBridge.h  SkinGenTriTable.inc  TrainBridge.cpp  TrainBridge.h  main.cpp
libmassedit/: Atlas.cpp  Atlas.h  Batch.cpp  Batch.h  CMakeLists.txt  Complete.cpp  Complete.h  DofMap.cpp  DofMap.h  Groom.cpp  Groom.h  Index.cpp  Index.h  Kinematics.cpp  Kinematics.h  MassEdit.vcxproj  MassModel.cpp  MassModel.h  Mcp.cpp  Mcp.h  Query.cpp  Query.h  README.md  common.props  massedit.vcxproj
libmassedit/server/: CMakeLists.txt  MassMcp.vcxproj  main.cpp  mass-mcp.vcxproj
libmassedit/test/: CMakeLists.txt  TestAtlas.vcxproj  TestBatch.vcxproj  TestComplete.vcxproj  TestGroom.vcxproj  TestIndex.vcxproj  TestKinematics.vcxproj  TestMcp.vcxproj  TestModel.vcxproj  TestQuery.vcxproj  test_atlas.cpp  test_atlas.vcxproj  test_batch.cpp  test_batch.vcxproj  test_complete.cpp  test_complete.vcxproj  test_groom.cpp  test_groom.vcxproj  test_index.cpp  test_index.vcxproj  test_kinematics.cpp  test_kinematics.vcxproj  test_mcp.cpp  test_mcp.vcxproj  test_model.cpp  test_model.vcxproj  test_query.cpp  test_query.vcxproj
libmassedit/vs/: MASS.slnx  common.props  mass-mcp.vcxproj  massedit.vcxproj  test_atlas.vcxproj  test_batch.vcxproj  test_complete.vcxproj  test_groom.vcxproj  test_index.vcxproj  test_kinematics.vcxproj  test_mcp.vcxproj  test_model.vcxproj  test_query.vcxproj
python/: CMakeLists.txt  Pymss.vcxproj  main.py
render/: CMakeLists.txt  Render.vcxproj
scripts/: arena.ps1  build-dist.ps1  build.ps1  editor.ps1  train.ps1  view.ps1
